fix: visibility fixes zoom

--- a/blocks/zoom/zoom.css
+++ b/blocks/zoom/zoom.css
@@ -1,9 +1,3 @@
-@keyframes showOn {
-  from {opacity: 0;
-        visibility: hidden;}
-  to {opacity: 1;
-    visibility: visible;}
-}
 
 .zoom {
   max-width: 75vw;
@@ -11,7 +5,6 @@
   box-sizing: border-box;
   z-index: 100;
   margin: 60px;
-  animation: showOn .5s ease;
 }
 
 @media screen and (max-width: 480px) {
